W04 Project: Project 2 Part 2 (Authentication) V.0.7
