# swagger.json
@@ -6,13 +6,18 @@
     "description": "API profesional con autenticación OAuth, validación de datos y manejo de errores."
   },
   "securityDefinitions": {
-    "OAuth2": {
+    "github": {
       "type": "oauth2",
       "flow": "implicit",
       "authorizationUrl": "https://cse341-webservices-jp5b.onrender.com/login",
       "scopes": {}
     }
   },
+  "security": [
+    {
+      "github": []
+    }
+  ],
   "host": "cse341-webservices-jp5b.onrender.com",
   "basePath": "/",
   "schemes": [
